# datatap

./: .env.example  README.md  main.py  pyproject.toml
core/: fetcher.py  loader.py  pipeline.py  schema_inferer.py
tests/: test_core.py  test_poke.py  test_remote.py
web/: app.py
web/templates/: source_detail.html
