[project]
name = "datatap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "dotenv>=0.9.9",
    "fastapi>=0.136.0",
    "flask>=3.1.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic>=2.13.2",
    "pytest>=9.0.3",
    "python-multipart>=0.0.27",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "starlette>=1.0.0",
    "uvicorn>=0.44.0",
]
